# sjakt

./: .gitignore  pyproject.toml
html/: index.html  main.js
html/lib/css/: chessboard-1.0.0.css
sjakt/: server.py
tests/: test_sjakt.py
